# clothing_classifier

./: .gitignore  .pre-commit-config.yaml  README.md  mlflow.db  pyproject.toml
.dvc/: config
clothing_classifier/: commands.py  download_data.py  lol.ipynb  test.py  train.py
clothing_classifier/modules/: clothing_classifier_dataset.py  module.py  resnet_data_module.py
clothing_classifier/utils/: data_handler.py  label_handler.py  logger.py  model_getter.py
configs/: config.yaml
configs/data/: data.yaml
configs/logging/: logging.yaml  logging_parameters.yaml
configs/model/: model.yaml
configs/training/: training.yaml
data/: data.dvc  dataset.dvc
scripts/: download_dataset
