[project]
name = "clothing_classifier"
version = "1.0.0"

description = "ML project with aim to classify clothing"
authors = [
    {name = "Anton Nosachev", email = "nosachev.aa@phystech.edu"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "kagglehub (>=0.3.12)",
    "hydra-core (>=1.3.2)",
    "pytorch-lightning (>=2.5.5)",
    "torchvision (>=0.24.0)",
    "datasets (>=4.4.0)",
    "transformers (>=4.57.3)",
    "gitpython (>=3.1.44)",
    "onnx (>=1.19.0)",
    "onnxruntime (>=1.22.0)",
    "tritonclient[http] (>=2.58.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
]

[tool.poetry]
version = "2.2.1"
packages = [{ include = "clothing_classifier" }]

[tool.poetry.group.dev.dependencies]
fire = "^0.7.0"
pre-commit = "^4.5.1"
mlflow = "^3.7.0"
dvc = "^3.64.0"
hydra-core="^1.3.2"

[tool.poetry.group.inference.dependencies]
tritonclient = "^2.63.0"

[tool.isort]
src_paths = ["clothing_classifier"]
profile = "black"
line_length = 80
lines_after_imports = 2

[tool.poetry.dependencies]
fire = "^0.7.0"
torch = "^2.9.0"
torchvision = "^0.24.0"
pytorch-lightning = "^2.5.5"
pandas = "^2.3.2"
hydra-core="^1.3.2"
omegaconf = "^2.3.0"
matplotlib = "^3.10.7"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
